--- a/To Do List App/index.html
+++ b/To Do List App/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div>
+        <div class="header-container">
+            <h1>My To Do List App</h1>
+        </div>
         <input type="text" id="task-input" placeholder="Enter Your Task">
         <button onclick="addTask()" id="addBtn" class="add-btn">+</button>
 
